--- a/wp-content/themes/cetm-child/styles/page/_contact-us.scss
+++ b/wp-content/themes/cetm-child/styles/page/_contact-us.scss
@@ -7,21 +7,20 @@
         margin-bottom: 10px;
 
         .banner-blur {
-            /*background-image: url(../../images/bg_2.jpg);*/
-            background-image: url('../../images/contact_bn.jpg');
+            background-image: url(http://miraway-cetm.com/wp-content/uploads/2018/07/contact_bn.jpg);
             background-size: cover;
             background-repeat: no-repeat;
             background-position: 0px -700px;
             position: fixed;
             height: 450px;
             width: 100%;
-            z-index: -1;
+            z-index: 0;
             top: 0;
             left: 0;
             pointer-events: none;
             /*filter: blur(2px);
             -webkit-filter: blur(2px);*/
-            @include xlg(){
+            @include xlg() {
                 background-position: 0px -900px;
             }
         }
@@ -32,6 +31,7 @@
             vertical-align: middle;
             text-align: center;
             z-index: 2;
+            position: relative;
 
             h3 {
                 font-family: 'helveticaneuelight' !important;
@@ -41,6 +41,7 @@
                 text-transform: uppercase;
                 position: relative;
                 margin-bottom: 20px;
+                font-weight:normal;
             }
 
             p {
@@ -54,6 +55,7 @@
         margin-top: -90px;
         background-color: #fff;
         padding: 60px 80px;
+        position: relative;
     }
 
     .nav-tabs {
@@ -85,9 +87,14 @@
                 border: 1px solid transparent;
                 border-radius: 4px 4px 0 0;
                 text-decoration: none !important;
+                background-color: transparent;
             }
 
             &.active {
+                a {
+                    border-color: transparent !important;
+                }
+
                 .avatar_tab {
                     background-color: #4b98ce;
                 }
@@ -103,16 +110,17 @@
 
     .contact-text {
         label {
-            font-family: 'helveticaneuemedium';
+            font-family: 'helveticaneuemedium' !important;
         }
     }
 
     .overview {
         h2 {
-            font-family: 'helveticaneuelight';
+            font-family: 'helveticaneuelight' !important;
             color: #333;
             font-size: 30px;
             margin-bottom: 20px;
+            font-weight: normal;
         }
 
         .list-contact {
@@ -144,9 +152,10 @@
 
                         &:first-child {
                             text-transform: uppercase;
-                            font-family: 'helveticaneuelight';
+                            font-family: 'helveticaneuelight' !important;
                             font-size: 16px;
                             margin: 5px 0;
+                            font-weight: normal;
                         }
 
                         a {
@@ -176,7 +185,8 @@
         padding: 80px 60px;
 
         h3 {
-            font-family: 'helveticaneuelight';
+            font-family: 'helveticaneuelight' !important;
+            font-weight: normal;
             color: #4b98ce;
             font-size: 38px;
             margin-top: 0;
@@ -204,13 +214,20 @@
             }
         }
 
+        textarea.form-control {
+            min-height: 20px;
+        }
+
         .button-submit {
             background-color: #4b98ce;
             color: #fff;
             border-radius: 20px;
             border: 1px solid #4b98ce;
-            padding: 10px 34px;
+            padding: 3px 26px;
             transition: all ease 0.2s;
+            font-size: 14px;
+            font-weight: normal;
+            text-transform: unset;
 
             &:hover {
                 opacity: 0.8;
