--- a/wp-content/themes/cetm-child/styles/_footer.scss
+++ b/wp-content/themes/cetm-child/styles/_footer.scss
@@ -1,24 +1,26 @@
 footer {
-    background-color: #003246;
+    background-color: #2b2b2b;
 
     .logo {
         max-width: 135px;
         float: left;
+        margin-top: 20px !important;
+        margin-bottom: 10px !important;
 
         img {
             width: 100%;
         }
     }
 
-    .menu {
+    .menu-footer {
         float: left;
         padding: 0;
         margin: 0;
-        margin-top: 35px;
-        margin-left: 45px;
+        margin-top: 27px !important;
+        margin-left: 45px !important;
 
         @include device {
-            margin: 0;
+            margin: 0 !important;
         }
 
         li {
@@ -27,11 +29,11 @@ footer {
             margin: 0 15px;
 
             @include device {
-                margin: 0 5px;
+                margin: 0 5px !important;
             }
 
             @include iphone5Landscape {
-                margin: 0 2px;
+                margin: 0 2px !important;
             }
 
             a {
@@ -56,7 +58,7 @@ footer {
         float: right;
         padding: 0;
         margin: 0;
-        margin-top: 22px;
+        margin-top: 20px !important;
 
         @include device {
             float: left;
@@ -117,10 +119,10 @@ footer {
         list-style: none;
         color: #fff;
         font-size: 13px;
-        margin-left: 25px;
+        margin-left: 25px !important;
 
         @include device {
-            margin-left: 15px;
+            margin-left: 15px !important;
         }
 
         li {
@@ -143,13 +145,14 @@ footer {
             &.adddress {
                 &:before {
                     content: "\f041";
+                    font-weight: 700;
                 }
             }
 
             &.phone {
                 &:before {
                     content: "\f095";
-                    font-weight:700;
+                    font-weight: 700;
                 }
             }
 
@@ -164,6 +167,7 @@ footer {
             font-size: 13px;
             text-transform: uppercase;
             margin-top: 0;
+            color: #fff !important;
 
             @include device() {
                 line-height: 21px;
@@ -179,8 +183,8 @@ footer {
 
         @include device {
             float: left;
-            margin-left: 15px;
-            margin-top: 20px;
+            margin-left: 15px !important;
+            margin-top: 20px !important;
         }
 
         li {
@@ -234,17 +238,25 @@ footer {
 
     .control-round {
         width: 100%;
-        border-radius: 30px;
-        height: 34px;
-        color: #6c6c6c;
+        border-radius: 30px !important;
+        height: 34px !important;
+        color: #6c6c6c !important;
         font-size: 16px;
-        border: 1px solid #fff;
+        border: 1px solid #fff !important;
 
         &:hover,
         &:active,
         &:focus {
-            border-color: #a2d6fa;
+            border-color: #a2d6fa !important;
             transition: all ease 0.2s;
         }
+    }
+
+    hr {
+        margin-top: 20px !important;
+        margin-bottom: 20px !important;
+        border: 0;
+        border-top: 1px solid #eee !important;
+        opacity:1;
     }
 }
