--- a/wp-content/themes/cetm-child/styles/lib/slick-theme.scss
+++ b/wp-content/themes/cetm-child/styles/lib/slick-theme.scss
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+﻿@charset "UTF-8";
 
 // Default Variables
 
@@ -13,8 +13,8 @@ $slick-loader-path: "./" !default;
 $slick-arrow-color: white !default;
 $slick-dot-color: black !default;
 $slick-dot-color-active: $slick-dot-color !default;
-$slick-prev-character: "\2190" !default;
-$slick-next-character: "\2192" !default;
+$slick-prev-character: "\f104" !default;
+$slick-next-character: "\f105" !default;
 $slick-dot-character: "\2022" !default;
 $slick-dot-size: 6px !default;
 $slick-opacity-default: 0.75 !default;
@@ -78,20 +78,25 @@ $slick-opacity-not-active: 0.25 !default;
     padding: 0;
     border: none;
     outline: none;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+
     &:hover, &:focus {
         outline: none;
         background: transparent;
         color: transparent;
+
         &:before {
             opacity: $slick-opacity-on-hover;
         }
     }
+
     &.slick-disabled:before {
         opacity: $slick-opacity-not-active;
     }
+
     &:before {
-        font-family: $slick-font-family;
-        font-size: 20px;
+        font-size: 50px;
         line-height: 1;
         color: $slick-arrow-color;
         opacity: $slick-opacity-default;
@@ -101,29 +106,35 @@ $slick-opacity-not-active: 0.25 !default;
 }
 
 .slick-prev {
-    left: -25px;
+    left: 0;
+
     [dir="rtl"] & {
         left: auto;
         right: -25px;
     }
+
     &:before {
-        content: $slick-prev-character;
+        content: "\f104";
+
         [dir="rtl"] & {
-            content: $slick-next-character;
+            content: "\f105";
         }
     }
 }
 
 .slick-next {
-    right: -25px;
+    right: 0;
+
     [dir="rtl"] & {
         left: -25px;
         right: auto;
     }
+
     &:before {
-        content: $slick-next-character;
+        content: "\f105";
+
         [dir="rtl"] & {
-            content: $slick-prev-character;
+            content: "\f104";
         }
     }
 }
@@ -143,6 +154,7 @@ $slick-opacity-not-active: 0.25 !default;
     padding: 0;
     margin: 0;
     width: 100%;
+
     li {
         position: relative;
         display: inline-block;
@@ -151,6 +163,7 @@ $slick-opacity-not-active: 0.25 !default;
         margin: 0 5px;
         padding: 0;
         cursor: pointer;
+
         button {
             border: 0;
             background: transparent;
@@ -163,12 +176,15 @@ $slick-opacity-not-active: 0.25 !default;
             color: transparent;
             padding: 5px;
             cursor: pointer;
+
             &:hover, &:focus {
                 outline: none;
+
                 &:before {
                     opacity: $slick-opacity-on-hover;
                 }
             }
+
             &:before {
                 position: absolute;
                 top: 0;
@@ -186,6 +202,7 @@ $slick-opacity-not-active: 0.25 !default;
                 -moz-osx-font-smoothing: grayscale;
             }
         }
+
         &.slick-active button:before {
             color: $slick-dot-color-active;
             opacity: $slick-opacity-default;
