--- a/wp-content/themes/cetm-child/styles/_footer.scss
+++ b/wp-content/themes/cetm-child/styles/_footer.scss
@@ -173,6 +173,10 @@ footer {
                 line-height: 21px;
             }
         }
+
+        a {
+            color: #fff;
+        }
     }
 
     .app-info {
@@ -257,6 +261,6 @@ footer {
         margin-bottom: 20px !important;
         border: 0;
         border-top: 1px solid #eee !important;
-        opacity:1;
+        opacity: 1;
     }
 }
