--- a/wp-content/themes/cetm-child/styles/page/_contact-us.scss
+++ b/wp-content/themes/cetm-child/styles/page/_contact-us.scss
@@ -1,4 +1,8 @@
 ﻿.contact-us {
+    @include device() {
+        padding-top: 100px;
+    }
+
     .c-banner {
         height: 400px;
         position: relative;
@@ -6,12 +10,16 @@
         width: 100%;
         margin-bottom: 10px;
 
+        @include device() {
+            display: none;
+        }
+
         .banner-blur {
             background-image: url(http://miraway-cetm.com/wp-content/uploads/2018/07/contact_bn.jpg);
             background-size: cover;
             background-repeat: no-repeat;
             background-position: 0px -700px;
-            position: fixed;
+            position: absolute;
             height: 450px;
             width: 100%;
             z-index: 0;
@@ -41,7 +49,7 @@
                 text-transform: uppercase;
                 position: relative;
                 margin-bottom: 20px;
-                font-weight:normal;
+                font-weight: normal;
             }
 
             p {
@@ -56,6 +64,11 @@
         background-color: #fff;
         padding: 60px 80px;
         position: relative;
+
+        @include device() {
+            margin-top: 0;
+            padding: 0 15px;
+        }
     }
 
     .nav-tabs {
@@ -70,6 +83,12 @@
             margin-bottom: -1px;
             margin-right: 30px;
 
+            @include device() {
+                width: 49%;
+                margin: 0;
+                text-align: center;
+            }
+
             .avatar_tab {
                 width: 65px;
                 height: 70px;
@@ -78,6 +97,10 @@
                 background-color: rgba(143,143,143,1);
                 background-position: center;
                 background-repeat: no-repeat;
+
+                @include device() {
+                    display: inline-block;
+                }
             }
 
             a {
@@ -128,10 +151,14 @@
             padding: 0;
             margin: 0;
 
+            @include device() {
+                display: none;
+            }
+
             li {
                 width: 50%;
                 float: left;
-                min-height: 115px;
+                min-height: 135px;
                 font-size: 14px;
 
                 &:nth-child(1),
@@ -183,6 +210,11 @@
         -moz-box-shadow: 0px 0px 33px 0px rgba(143,143,143,1);
         box-shadow: 0px 0px 33px 0px rgba(143,143,143,1);
         padding: 80px 60px;
+
+        @include device() {
+            padding: 0 15px;
+            box-shadow: none;
+        }
 
         h3 {
             font-family: 'helveticaneuelight' !important;
